--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ language: python
 python:
   - "3.6"
   - "3.7"
-install: pip install tox-travis
+install: pip install tox-travis coverage codecov
 script: tox
