--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,8 @@
 [metadata]
 description-file = README.md
+
+[tool:pytest]
+addopts=--cov=jsonbender --cov-report=term
+
+[coverage:run]
+source = jsonbender
