--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 [testenv]
+passenv=TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 deps=
     pytest
     pytest-cov
     codecov>=1.4.0
 commands=
     pytest --cov -v tests
+    codecov -e TOXENV
 
 [tox]
 envlist =
-    py{27,37}-app
+    py{36,37}-app
