Migrate to pytest

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [testenv]
 deps=
-    unittest2
-    discover
-commands=unit2 discover tests -v
+    pytest
+    pytest-cov
+    codecov>=1.4.0
+commands=
+    pytest --cov -v tests
 
 [tox]
 envlist =
