--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ deps=
     pytest-cov
     codecov>=1.4.0
 commands=
-    pytest --cov -v tests
+    pytest --cov={envsitepackagesdir}/jsonbender --cov-append -v tests
     codecov -e TOXENV
 
 [tox]
